--- a/index.html
+++ b/index.html
@@ -228,14 +228,15 @@
     <script>
         // Firebase configuration - You'll need to replace this with your own config
         const firebaseConfig = {
-            apiKey: "your-api-key-here",
-            authDomain: "your-project.firebaseapp.com",
-            databaseURL: "https://your-project-default-rtdb.firebaseio.com/",
-            projectId: "your-project-id",
-            storageBucket: "your-project.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "your-app-id"
+          apiKey: "AIzaSyDl5EOKrXczyQFMmeZTXOknyS2hX0KNbfc",
+          authDomain: "tempchat-cf429.firebaseapp.com",
+          projectId: "tempchat-cf429",
+          storageBucket: "tempchat-cf429.firebasestorage.app",
+          messagingSenderId: "114149371895",
+          appId: "1:114149371895:web:c93fa3335a0ccee4ad88f2",
+          measurementId: "G-YKK4RXR8KZ"
         };
+
         
         // Initialize Firebase (with fallback for demo)
         let db = null;
