--- a/index.html
+++ b/index.html
@@ -226,17 +226,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.23.0/firebase-database-compat.min.js"></script>
     
     <script>
-        // Firebase configuration - You'll need to replace this with your own config
+        // Firebase configuration - Updated with your proper config including databaseURL
         const firebaseConfig = {
-          apiKey: "AIzaSyDl5EOKrXczyQFMmeZTXOknyS2hX0KNbfc",
-          authDomain: "tempchat-cf429.firebaseapp.com",
-          projectId: "tempchat-cf429",
-          storageBucket: "tempchat-cf429.firebasestorage.app",
-          messagingSenderId: "114149371895",
-          appId: "1:114149371895:web:c93fa3335a0ccee4ad88f2",
-          measurementId: "G-YKK4RXR8KZ"
+            apiKey: "AIzaSyDl5EOKrXczyQFMmeZTXOknyS2hX0KNbfc",
+            authDomain: "tempchat-cf429.firebaseapp.com",
+            databaseURL: "https://tempchat-cf429-default-rtdb.firebaseio.com",
+            projectId: "tempchat-cf429",
+            storageBucket: "tempchat-cf429.firebasestorage.app",
+            messagingSenderId: "114149371895",
+            appId: "1:114149371895:web:45c17c152fea10aead88f2",
+            measurementId: "G-EFZJ7L2L1G"
         };
-
         
         // Initialize Firebase (with fallback for demo)
         let db = null;
